objects/Product_Information__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Template for Product Information</description>
    <fields>
        <fullName>Author__c</fullName>
        <formula>LastModifiedBy.LastName + &apos;, &apos; +  LastModifiedBy.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Author</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Danfoss_image__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=015M0000000bcMZ&quot;, &quot;Logo&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Danfoss image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_mail__c</fullName>
        <inlineHelpText>Enter e-mail address if relevant</inlineHelpText>
        <label>E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>General__c</fullName>
        <label>General</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Links__c</fullName>
        <label>Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Product Information</label>
    <pluralLabel>Product Informations</pluralLabel>
</CustomObject>